@@ -1,3 +1,12 @@
+nenolod     2006/02/13 20:37:34 UTC	(20060213-4829)
+  Log:
+  - Document atheme.account.set_password.
+  
+
+  Changes:	Modified:
+  +1 -0		trunk/contrib/xmlrpc_explorer.php (File Modified) 
+
+
 nenolod     2006/02/13 20:18:28 UTC	(20060213-4827)
   Log:
   - Add atheme.account.set_password call.
